[metadata]
name = netflix-spectator-py-runtime-metrics
version = 1.0.2
description = Library to collect runtime metrics for Python applications using spectator-py.
long_description = file: README.md
long_description_content_type = text/markdown
author = Netflix Telemetry Engineering
author_email = netflix-atlas@googlegroups.com
license = Apache 2.0
url = https://github.com/Netflix/spectator-py-runtime-metrics

[options]
python_requires = >3.8
packages =
    runmetrics
install_requires =
    netflix-spectator-py>=1.0.0

[options.extras_require]
dev =
  check-manifest
  pylint
  pytest-cov
  pytest
